Add styling to container element

--- a/assets/css/stlye.css
+++ b/assets/css/stlye.css
@@ -17,7 +17,7 @@ body{
 }
 
 section{
-    min-height: 70vh;
+    min-height: 60vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -26,9 +26,19 @@ section{
 
 .container{
     background-color: #F9F9ED;
-    padding: 3.2rem 1.8rem 1.8rem 1.8rem;
+    padding: 3.1rem 1.7rem 1.7rem 1.7rem;
     margin-top: -25.25rem;
     width: 95%;
-    max-width: 600px;
+    max-width: 30.5rem;
+    min-height: 25.25rem;
+    border-radius: 10px;
+    color: #464655;
+    position: relative;
+    overflow: hidden;
+}
+
+.container .scoreBoard{
+    
+
 }
 
