Add styling to the content of the form element

--- a/assets/css/stlye.css
+++ b/assets/css/stlye.css
@@ -13,7 +13,7 @@ html{
 }
 
 body{
-    background-color: #6BBAEC;
+    background-color: hwb(203 13% 4%)
 }
 
 section{
@@ -25,7 +25,7 @@ section{
 }
 
 .container{
-    background-color: #F9F9ED;
+    background-color: #FAFAFA;
     padding: 3.1rem 1.7rem 1.7rem 1.7rem;
     margin-top: -25.25rem;
     width: 95%;
@@ -43,3 +43,52 @@ section{
     right: 20px;
 }
 
+form h2{
+    font-size: 1.6rem;
+    line-height: 2rem;
+    margin-bottom: 2rem;
+}
+
+form .option{
+    font-size: 1.4rem;
+    margin: 5px 0 0 5px;
+    padding: 10px;
+    transition: .3s ease background-color;
+    border-radius: 4px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+}
+
+form .option label{
+    width: 100%;
+    margin-left: 10px;
+    cursor: pointer;
+    justify-self: stretch;
+}
+
+form .option:hover{
+    background-color: #E6E6E6;
+}
+
+form .option input[type="radio"]:checked + label{
+    color: #FF7721;
+
+}
+form button{
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px;
+    font-size: 1.3rem;
+    font-family: 'Didact Gothic', sans-serif;
+    background-color: #E6E6E6;
+    border: none;
+    color: #464655;
+    cursor: pointer;
+    transition: .3s ease background-color;
+}
+
+button:hover{
+    background-color: #cccccc;
+}
