--- a/assets/css/stlye.css
+++ b/assets/css/stlye.css
@@ -13,7 +13,13 @@ html{
 }
 
 body{
-    background-color: hwb(203 13% 4%)
+    background-color: hwb(203 13% 4%);
+    overflow: hidden;
+}
+
+h1{
+    margin-top: -30rem;
+    font-size: 5rem;
 }
 
 section{
@@ -22,6 +28,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: rem;
 }
 
 .container{
@@ -35,6 +42,7 @@ section{
     color: #464655;
     position: relative;
     overflow: hidden;
+    min-height: 60vh;
 }
 
 .container .scoreBoard{
@@ -86,7 +94,7 @@ form button,
     background-color: #E6E6E6;
     border: none;
     color: #464655;
-    cursor: pointer;
+    cursor:default;
     transition: .3s ease background-color;
 }
 
@@ -119,7 +127,7 @@ form .option.correct{
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: #E6E6E6;
+    background-color:  #FAFAFA;
     text-align: center;
     display: flex;
     align-items: center;
@@ -129,4 +137,12 @@ form .option.correct{
 
 .container .result-overlay .final-result{
     font-size: 5rem;
+}
+
+/** MEDIA QUERIES **/
+
+@media only screen and (max-width: 600px) {
+    .container{
+        width: 80%;
+    }
 }
