Add final touches and go!

--- a/assets/css/stlye.css
+++ b/assets/css/stlye.css
@@ -144,5 +144,6 @@ form .option.correct{
 @media only screen and (max-width: 600px) {
     .container{
         width: 80%;
+        height: 40vh;
     }
 }
